SVN
-------------------------------

CTF:   Resolved issue CASTOR-1831 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove Adaptx from Castor; add new implementation of xmldiff for CTF
       Details: http://jira.codehaus.org/browse/CASTOR-1831
       (Edward - 20070113)

Gen:   Resolved issue CASTOR-1829 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fully qualified references to java.lang.Object in CollectionInfo.createRemobeByIndexMethod().
       Details: http://jira.codehaus.org/browse/CASTOR-1829
       (Edward - 20070112)

JDO:   Resolved issue CASTOR-1817 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up Java 5 build complaints in ddlgen
       Details: http://jira.codehaus.org/browse/CASTOR-1817
       (Edward - 20070108)

Doc:   Resolved issue CASTOR-1816 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup on ddlgen properties doc
       Details: http://jira.codehaus.org/browse/CASTOR-1816
       (Edward - 20070108)

XML:   Resolved issue CASTOR-1813 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Refactored org.exolab.castor.builder.types package.
       Details: http://jira.codehaus.org/browse/CASTOR-1813
       (Ralf - 20070109)

XML:   Resolved issue CASTOR-1814 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML serialization using Xerces as bundled with JDK 5.0.
       Details: http://jira.codehaus.org/browse/CASTOR-1814
       (Edward - 20070108)

CTF:   Resolved issue CASTOR-1804 using contribution from Edward Kuns [edward.kuns@aspect.com]
       RandomHelper needs updates
       Details: http://jira.codehaus.org/browse/CASTOR-1804
       (Edward - 20070104)

Gen:   Resolved issue CASTOR-1810 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Incorrect import lines in generated classes: dots are missing
       Details: http://jira.codehaus.org/browse/CASTOR-1810